--- a/Test.html
+++ b/Test.html
@@ -2,6 +2,6 @@
 <body>
 <title> Git to Github integration </title>
   Success-from Github
-  Second -modify from github
+  /n Second -modify from github
 </body>
 </html>
