--- a/Test.html
+++ b/Test.html
@@ -1,8 +1,41 @@
+
+
+<!DOCTYPE html>
 <html>
+ 
+<head>
+    <title>
+        Git to Github integration
+    </title>
+</head>
+ 
 <body>
-<title> Git to Github integration </title>
-  Success-from Github
-  <p bgcolor ="red"> <br> Second -modify from github </p>
-  <marquee>guruvgaru- don't give up </marquee>
+    <h1>First commit from Github</h1>
+ 
+    <h2>Second commit from Github</h2>
+ 
+    <table border="1"
+        bgcolor="green">
+        <caption>
+        Author Details
+    </caption>
+ 
+        <tr>
+            <th>NAME</th>
+            <th>AGE</th>
+            <th>BRANCH</th>
+        </tr>
+        <tr>
+            <td>BITTU</td>
+            <td>22</td>
+            <td>CSE</td>
+        </tr>
+        <tr>
+            <td>RAM</td>
+            <td>21</td>
+            <td>ECE</td>
+        </tr>
+    </table>
 </body>
+ 
 </html>
