--- a/Test.html
+++ b/Test.html
@@ -10,30 +10,31 @@
 </head>
  
 <body>
+ <h1><center>Git to Github integration </center></h1>
     <h1>First commit from Github</h1>
  
     <h2>Second commit from Github</h2>
  
     <table border="1"
-        bgcolor="green">
+        bgcolor="blue">
         <caption>
         Author Details
     </caption>
  
         <tr>
-            <th>NAME</th>
-            <th>AGE</th>
+            <th>tOOL</th>
+            <th>pUSH/PULL</th>
             <th>BRANCH</th>
         </tr>
         <tr>
-            <td>BITTU</td>
-            <td>22</td>
-            <td>CSE</td>
+            <td>Git</td>
+            <td>01</td>
+            <td>git-new</td>
         </tr>
         <tr>
-            <td>RAM</td>
-            <td>21</td>
-            <td>ECE</td>
+            <td>GITHUB</td>
+            <td>02</td>
+            <td>git-new</td>
         </tr>
     </table>
 </body>
