--- a/Test.html
+++ b/Test.html
@@ -8,7 +8,7 @@
     </title>
 </head>
  
-<body style="background-color:grey;">
+<body style="background-color:yellow;">
  <h1 bgcolor="yellow"><center>Git to Github integration </center></h1>
 <marquee bgcolor="red">Git to Github integration</marquee>
     <h1>First commit from Github</h1>
