--- a/Test.html
+++ b/Test.html
@@ -16,7 +16,7 @@
     <h2>Second commit from Github</h2>
  
     <table border="1"
-        bgcolor="blue">
+        bgcolor="white">
         <caption>
         Author Details
     </caption>
