--- a/Test.html
+++ b/Test.html
@@ -22,8 +22,8 @@
     </caption>
  
         <tr>
-            <th>tOOL</th>
-            <th>pUSH/PULL</th>
+            <th>TOOL</th>
+            <th>PUSH/PULL</th>
             <th>BRANCH</th>
         </tr>
         <tr>
