--- a/Test.html
+++ b/Test.html
@@ -39,5 +39,5 @@
     </table>
 
 </body>
- <marquee bgcolor="red">Git to Github integration</marquee> 
+ <marquee bgcolor="white">Git to Github integration</marquee> 
 </html>
